2023-05-26  Georg-Johann Lay  <avr@gjlay.de>

Support a new syscall avrtest_abort_2nd_hit() that calls abort if
it is executed more than once.  This is useful for programs that go
haywire and execute startup code more than once.  The startup code in
dejagnuboards/exit.c now calls this syscall.

	* avrtest.c (sys_abort_2nd_hit): New static function.
	(func_SYSCALL) [sysno=25]: Call it.
	* acrtest.h (avr_syscall_25, avrtest_abort_2nd_hit): New static
	inline functions.
	[assembler] <AVRTEST_ABORT_2ND_HIT>: New define.
	* dejagnuboards/exit.c (avrtest_init_argc_argv): Call
	avrtest_abort_2nd_hit.

2023-05-26  Georg-Johann Lay  <avr@gjlay.de>

Add command line option -s SIZE to specify the size of the
simulated program memory.  The value is used when the program
counter needs wrap-around.  SIZE must be a power of 2.

	* testavr.h (program_t) [max_pc, pc_mask]: New fields.
	* options.def (-s): New option.
	* options.c (USAGE) [-s SIZE]: Document.
	(get_valid_kilo): New static function.
	(parse_args) [OPT_size]: Handle.
	Set program.pc_mask.
	* load-flash.c (decode_flash) [program.max_pc]: Set.
	* avrtest.c (set_pc, add_pc): New static functions to set PC.
	Use them throughout the module.

2023-05-22  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/avrtest.exp: set_board_info gcc,signal_suppress
	in order to skip more tests involving <signal.h> etc.

2023-05-19  Georg-Johann Lay  <avr@gjlay.de>

	* load-flash.c (check_elf): New function.
	(load_elf): Use it.

2022-09-19  Georg-Johann Lay  <avr@gjlay.de>

	Support 64-bit values in option -m MAXCOUNT.

	* options.c (get_valid_number): Return uint64_t.
	(parse_args): Adjust accordingly.
	* testavr.h (inttypes.h): Include it.
	(program_t) [max_insns, n_insns, n_cycles]: Turn to uint64_t.
	* avrtest.c (leave, execute): Adjust accordingly.
	* host.c (ticks_port_t) [n_insns, n_cycles]: Turn to uint64_t.
	(sys_ticks_cmd): Adjust to it.
	* perf.c (perf_start, perf_stop, perf_instruction): Adjust to