@@ -240,11 +240,19 @@ log_set_func_symbol (int addr, size_t stoff, bool is_func)
           || addr >= MAX_FLASH_SIZE))
     leave (LEAVE_SYMBOL, "'%s': bad symbol at 0x%x", name, addr);
 
+  // ??? Some newer Binutils GAS version introduce an arificial
+  // label after "RCALL .+0" that contains non-printable character
+  // like "L0^A".  According to Binutils documentation "Local Labels" at
+  // https://sourceware.org/binutils/docs-2.40/as/Symbol-Names.html
+  // such a label would result from "L0$".  Ignore them.
+  bool nonprint = name[0] && name[1] && name[2] < 0x20;
+
   if (addr % 2 != 0
       // Something weird, maybe orphan etc.
       || addr >= MAX_FLASH_SIZE
       // Ignore internal labels
-      || name[0] == '.')
+      || name[0] == '.'
+      || nonprint)
     {
       stab->n_bad++;
       return;
